--- a/src/GUI/Views/MainScreen.fxml
+++ b/src/GUI/Views/MainScreen.fxml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="GUI.Controllers.MainScreen"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="225.0" prefWidth="372.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.MainScreen">
+   <children>
+      <TextField fx:id="numberfield" layoutX="157.0" layoutY="100.0" prefHeight="26.0" prefWidth="59.0" />
+      <Button layoutX="160.0" layoutY="176.0" mnemonicParsing="false" onAction="#guessnumber" style="-fx-background-color: white;" text="Guess" />
+      <Label fx:id="questlabel" layoutX="5.0" layoutY="29.0" prefHeight="29.0" prefWidth="363.0" text="Guess the number between 0-1000" textFill="WHITE">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <Label layoutX="14.0" layoutY="92.0" prefHeight="17.0" prefWidth="40.0" text="Level:" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="levellabel" layoutX="54.0" layoutY="92.0" text="Label" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
