--- a/src/GUI/Views/WelcomeScreen.fxml
+++ b/src/GUI/Views/WelcomeScreen.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="GUI.Controllers.WelcomeScreen"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="153.0" prefWidth="313.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controllers.WelcomeScreen">
+   <children>
+      <Label layoutX="14.0" layoutY="44.0" text="Welcome to Number Guessing Game!" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label layoutX="126.0" layoutY="77.0" text="Have fun!" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Button layoutX="132.0" layoutY="113.0" mnemonicParsing="false" onAction="#startgame" style="-fx-background-color: white;" text="Start" />
+   </children>
 </AnchorPane>
